# Bible_RAG

./: .env.example  README.md  backend_error.md  docker-compose.yml  spec.md  問題.md
.claude/agents/: devops-engineer.md  (+1 more)
backend/: .env  .env.example  Dockerfile  README.md  entity_extraction_checkpoint.json  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1638a3952bd5_initial_schema_with_pgvector.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: books.py  graph.py  pericopes.py  query.py  verses.py
backend/app/core/: config.py  database.py  neo4j_client.py
backend/app/models/orm/: __init__.py  base.py  book.py  chapter.py  entity.py  pericope.py  topic.py  verse.py
backend/app/models/schemas/: __init__.py  book.py  common.py  graph.py  pericope.py  query.py  verse.py
backend/app/services/: context_builder.py  embedding_service.py  fusion.py  llm_client.py  rag_pipeline.py
backend/app/services/retrievers/: dense_retriever.py  graph_retriever.py  sparse_retriever.py
backend/data/: synoptic_parallels.json
backend/scripts/: build_graph.py  build_index.py  compute_topic_relations.py  entity_extractor.py  import_cross_references.py  import_prophecy_links.py  import_synoptic_parallels.py  init_postgres.sql  pdf_parser.py  summary_generator.py
docs/: API_SPEC.md  ARCHITECTURE.md  BACKEND_ARCHITECTURE.md
frontend/: .env.example  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
nginx/: Dockerfile  nginx.conf
(+76 files in other folders)
